Overflow bugfix, JS via CDN
- Fixed a bug causing experiment list not to overflow
- Moved from JS in Source to CDN

--- a/analyzer/static/css/style.css
+++ b/analyzer/static/css/style.css
@@ -38,7 +38,7 @@ body {
 
 .container {
 	/* border: 1px dashed; */
-	float: left;
+	/*float: left;*/
 	display: inline-block;
 }
 
@@ -170,9 +170,10 @@ body {
 }
 */
 #experiments {
+    width: 100%;
 	color: #fff;
-	overflow: auto
-	white-space: nowrap;
+	overflow-x: scroll;
+    white-space: nowrap;
 }
 
 .labels {
